--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,3 +19,6 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3001
+          env:
+            - name: NODE_ENV
+              value: 'production'
