--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy API to Kubernetes
 on:
   push:
     branches:
-      - main # Se ejecuta cuando haces push a main
+      - main
 
 jobs:
   build-and-deploy:
