--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,12 +13,76 @@ spec:
       labels:
         app: spendify-api
     spec:
+      restartPolicy: Always
       containers:
         - name: api
-          image: spendify-api:latest
+          image: tu_usuario_dockerhub/spendify-api:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
           env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: DB_HOST
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: DB_NAME
+            - name: DB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: DB_USERNAME
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: DB_PASSWORD
+            - name: DB_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: DB_PORT
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: JWT_SECRET
+            - name: EMAIL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: EMAIL_USER
+            - name: EMAIL_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: EMAIL_PASS
+            - name: GOOGLE_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: GOOGLE_CLIENT_ID
+            - name: GOOGLE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: GOOGLE_CLIENT_SECRET
+            - name: GOOGLE_CALLBACK_URL
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: GOOGLE_CALLBACK_URL
+            - name: FRONTEND_URL
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: FRONTEND_URL
             - name: NODE_ENV
-              value: 'production'
+              valueFrom:
+                secretKeyRef:
+                  name: spendify-secrets
+                  key: NODE_ENV
