--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           kubectl apply -f k8s/ -n spendify
 
-      - name: **Forzar actualización de la imagen**
+      - name: Forzar actualización de la imagen
         run: |
           kubectl set image deployment/spendify-api -n spendify api=${{ secrets.DOCKERHUBUSERNAME }}/spendify-api:latest
           kubectl rollout status deployment/spendify-api -n spendify
