--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
+    "winston": "^3.17.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
