--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
     "js-yaml": "^4.1.0",
+    "nestjs-cls": "^6.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
